--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Ash Armelia</h1>
-<p>This is my page on github</p>
+<h1>Ash-Iris</h1>
+<p>This is my page on GITHUB</p>
 </body>
 </html>
