--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Ash-Iris</h1>
 <p>This is my page on GITHUB</p>
+<p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
 </html>
