--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Ash-Iris</h1>
-<p>This is my page on GITHUB</p>
+  <p>This is my page on GITHUB</p></br>
 <p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
 </html>
