--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Ash-Iris</h1>
+  
+<title>Ash-Iris</title>
+
+  <h1>Ash-Iris</h1>
+  
   <p>This is my page on GITHUB</p></br>
-<p>Resume goes here maybe IDK I don't like making these things public</p>
-</body>
+  
+  <p>Resume goes here maybe IDK I don't like making these things public</p>
+
+  </body>
 </html>
