--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <title>Title here</title>
+<head/>
+
 <body>
-  
-<title>Ash-Iris</title>
-
   <h1>Ash-Iris</h1>
-  
   <p>This is my page on GITHUB</p></br>
-  
   <p>Resume goes here maybe IDK I don't like making these things public</p>
-
-  </body>
+</body>
 </html>
