--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Title here</title/>
+  <title>I SEE YOU!</title/>
 <head/>
 
 <body>
   <h1>Ash-Iris</h1>
-  <p>This is my page on GITHUB</p></br>
+  <p>This is my page on GITHUB</p>
   <p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
 </html>
