--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Ash-Iris</h1>
-  <p>This is my page on GITHUB</p>
+  <br><p>This is my page on GITHUB</p></br>
   <p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
 </html>
