--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <h1>Ash-Iris</h1>
+  <h2>Introduction</h2>
   <br><p>This is my page on GITHUB</p></br>
   <p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
