--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-  <h1>Ash-Iris</h1>
-  <h2>Introduction</h2>
-  <br><p>This is my page on GITHUB</p></br>
+  <h1>Ash-Iris</h1></br>
+  <h2>Introduction</h2></br>
+  <p>This is my page on GITHUB</p></br>
   <p>Resume goes here maybe IDK I don't like making these things public</p>
 </body>
 </html>
