--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 
 <head>
-  <title>I SEE YOU!</title>
+ <title>I SEE YOU!</title>
 </head>
 
 <body>
-  <h1>Ash-Iris</h1></br>
-  <p><h2>Introduction</h2></br>
-   This is my page on GITHUB</p></br>
-  <p>Resume goes here maybe IDK I don't like making these things public</p>
+ <h1>Ash-Iris</h1></br>
+  
+<h3>Introduction</h3>
+  <p></br>This is my page on GITHUB</p></br>
+
+<h3>More information goes here:</h3>
+  <p>Resume goes here maybe IDK I don't like making these things public</p></br>
+
 </body>
 </html>
