--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>Introduction</h3>
   <p></br>This is my page on GITHUB</p></br>
 
-<h3>More information goes here:</h3>
+<h3>More information goes here:</h3></br>
   <p>Resume goes here maybe IDK I don't like making these things public</p></br>
 
 </body>
