--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
  <title>I SEE YOU!</title>
 </head>
@@ -12,7 +11,6 @@
   <p></br>This is my page on GITHUB</p></br>
 
 <h3>More information goes here:</h3></br>
-  <p>Resume goes here maybe IDK I don't like making these things public</p></br>
-
+  <p>Resume goes here</p></br>
 </body>
 </html>
