--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   
 <h3>Introduction</h3>
   <p></br>This is my page on GITHUB</p></br>
-
+<a href="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg">
+ This is a picture of a purple Iris</a>
 <h3>More information goes here:</h3></br>
   <p>Resume goes here</p></br>
 </body>
