--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p></br>This is my page on GITHUB</p></br>
 <a href="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg">
   This is a picture of a purple Iris</a>
-<img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg"> 
+<img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg" 
   alt="W3Schools.com" width="104" height="142">
 <h3>More information goes here:</h3></br>
   <p>Resume goes here</p></br>
