--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <h3>Introduction</h3>
   <p></br>This is my page on GITHUB</p></br>
 <a href="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg">
-  This is a picture of a purple Iris</a>
+ This is a picture of a purple Iris</a></br>
 <img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg" 
-  alt="W3Schools.com" width="104" height="142">
+  width="106.6" height="160">
 <h3>More information goes here:</h3></br>
   <p>Resume goes here</p></br>
 </body>
