--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  
+<body bgcolor=”#800000">
 <head>
  <title>Welcome</title>
 </head>
@@ -14,4 +16,6 @@
 <h3>More information goes here:</h3></br>
   <p>Resume goes here</p></br>
 </body>
+                                                                                                                                      
+</body bgcolor=”#800000">
 </html>
