--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
  <title>Welcome</title>
 </head>
 
+  
 <body>
+  
+   
+<div class=”example”>This is a div on a webpage.
   <body bgcolor=”#008080">
+</div> 
  <h1>Ash-Iris</h1></br>
   
 <h3>Introduction</h3>
