--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   
    
 <div class=”example”>This is a div on a webpage.
-  <body bgcolor=”#008080">
+ 
+.example {background-color: rgb(255, 122, 89); } 
 </div> 
+  
  <h1>Ash-Iris</h1></br>
   
 <h3>Introduction</h3>
