--- a/index.html
+++ b/index.html
@@ -1,5 +1,52 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Welcome</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Top Navigation Example</h2>
+  <p>Some content..</p>
+</div>
   
 
 <head>
@@ -12,23 +59,14 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div> 
-  
-<body>
-  
-   
-<div class=”example”>This is a div on a webpage.
  
-.example {background-color: rgb(255, 122, 89); } 
-</div> 
-  
- <h1>Ash-Iris</h1></br>
-  
-<h3>Introduction</h3>
+<div class="intro">
+  <h3>Introduction</h3>
   <p></br>This is my page on GITHUB</p></br>
-<a href="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg">This is the link to a picture of a purple Iris</a></br>
 <img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg" width="160" height="106.6">
-<h3>More information goes here:</h3></br>
-  <p>Resume goes here</p></br>
+.intro {background-color: #04AA6D; }
+</div> 
+
+
 </body>
-                                                                                                                                      
 </html>
