--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
 <title>Welcome</title>
+  
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -49,22 +51,13 @@ body {
 </div>
   
 
-<head>
- <title>Welcome</title>
-</head>
 
- <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div> 
+
  
 <div class="intro">
-  <h3>Introduction</h3>
-  <p></br>This is my page on GITHUB</p></br>
+
+.intro {background-color: #d5d8dc}
 <img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg" width="160" height="106.6">
-.intro {background-color: #04AA6D; }
 </div> 
 
 
