--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ body {
  
 <div class="intro">
 
-.intro {background-color: #d5d8dc;
-  color: gray;}
+.intro {background-color: #ddd;
+  color: black;}
 <img src="https://cdn.britannica.com/11/174711-050-9A8DDE76/Flower-Iris-Siberian-flag-Garden-Close-up.jpg" width="160" height="106.6">
 </div> 
 
