--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-  
-<title>PAGES OF HERBS</title>
-  
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en-US">
 
-</style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Medicinal Herbs</title>
+    <meta name="herbs" content="a dictionary of different herbs and their uses">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
+<body>
 </body>
 </html>
