--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
 </head>
 
 <body>
+    
+
+<header>
+    <h1>Armelia's Herbal Dictionary</h1>
+    <h2>Just practicing for now</h2>
+</header>
+
+
 </body>
 </html>
