--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-    
-
+<body> 
 <header>
     <h1>Armelia's Herbal Dictionary</h1>
     <h2>Just practicing for now</h2>
 </header>
+<nav>
+    <ul>
+        <li>Home</li>
+        <li>Medicine</li>
+        <li>Cooking</li>
+        <li>Information</li>
+    </ul>
+</nav>
+
 
 
 </body>
